found fix for overflow issue

--- a/apps/site/src/styles/base.css
+++ b/apps/site/src/styles/base.css
@@ -1,6 +1,9 @@
 @tailwind base;
 
 @layer base {
+  html {
+    overflow-x: hidden;
+  }
   body {
     @apply bg-breadgray-ultra-white dark:bg-breadgray-darkest;
     @apply text-breadgray-charcoal dark:text-breadgray-white;
